Draw the image within the coin, simplify the code by using a native 512x512 image

--- a/Source/ViewController.xib
+++ b/Source/ViewController.xib
@@ -40,10 +40,11 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="810040229">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{20, 64}, {280, 464}}</string>
+						<int key="NSvFlags">301</int>
+						<string key="NSFrame">{{32, 168}, {256, 256}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">4</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -141,8 +142,8 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="810040229"/>
 							<reference ref="685418690"/>
+							<reference ref="810040229"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
